--- a/up_project/static/css/up_project.css
+++ b/up_project/static/css/up_project.css
@@ -8,6 +8,24 @@
     margin-left: 800px;
 }
 
-.openerp table.activetable, .openerp table.activetable td, .openerp table.activetable  tr {
+.openerp table.activetable {
+    border: 2px solid #000000;
+}
+
+.openerp table.activetable  tr {
     border: 1px solid #000000;
+}
+
+.openerp table.activetable td {
+    border: 1px solid #000000;
+    border-right: 1px solid #000000 !important;
+    height: 24px;
+    padding-top: 7px !important;
+}
+
+.openerp table.activetable th {
+    border: 1px solid #000000;
+    border-right: 1px solid #000000 !important;
+    height: 24px;
+    padding-top: 7px !important;
 }
