UPDIS-231 项目管理模块的归正 修改细节,加上发短信功能,项目启动貌似齐活了

--- a/up_project/static/css/up_project.css
+++ b/up_project/static/css/up_project.css
@@ -33,3 +33,16 @@
 .openerp div.inline-item span {
     width: auto !important;
 }
+
+.openerp div.area-header {
+    margin: 30px;
+}
+
+.openerp div.area-header h3 {
+    border-bottom: solid 1px grey;
+    margin-bottom: 20px;
+}
+
+.openerp div.sheet-title {
+    text-align: center;
+}
