UPDIS-275 - 项目创建增加提示文字

--- a/up_project/static/css/up_project.css
+++ b/up_project/static/css/up_project.css
@@ -70,3 +70,8 @@
 .openerp div.oe_long_title {
     width: 70% !important;
 }
+
+.openerp span.big-red-hit {
+    color: red;
+    font-size: 20px;
+}
