UPDIS-283 项目文件上传支持

--- a/up_project/static/src/css/up_project.css
+++ b/up_project/static/src/css/up_project.css
@@ -75,3 +75,8 @@
     color: red;
     font-size: 20px;
 }
+
+.openerp .no_shadow > img {
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+}
