--- a/up_project/static/src/css/up_project.css
+++ b/up_project/static/src/css/up_project.css
@@ -20,14 +20,14 @@
     border: 1px solid #000000;
     border-right: 1px solid #000000 !important;
     height: 24px;
-    padding-top: 7px !important;
+    padding: 7px 0px 2px 8px !important;
 }
 
 .openerp table.activetable th {
     border: 1px solid #000000;
     border-right: 1px solid #000000 !important;
     height: 24px;
-    padding-top: 7px !important;
+    padding: 2px 0px 2px 8px !important;
 }
 
 .openerp table.no-border-table {
