--- a/up_project/report/header.xml
+++ b/up_project/report/header.xml
@@ -6,7 +6,7 @@
             <field name="orientation">Portrait</field>
             <field name="format">A4</field>
             <field name="margin_top" eval="10"/>
-            <field name="margin_bottom" eval="30"/>
+            <field name="margin_bottom" eval="20"/>
             <field name="css"><![CDATA[
         body {
             font-family: "Microsoft YaHei", "SimSun", "Lucida Grande", Helvetica, Verdana, Arial, sans-serif;
@@ -60,7 +60,7 @@
             <field name="footer_html"><![CDATA[
             <html>
                 <body>
-                    <div>${helper.embed_logo_by_name('updis_logo')|n}</div>
+                    <div>${helper.embed_logo_by_name('updis_logo',width=200)|n}</div>
                 </body>
             </html>]]>
             </field>
