--- a/updis/static/src/css/updis.css
+++ b/updis/static/src/css/updis.css
@@ -56,7 +56,7 @@
     border-radius: 0 0 2px 2px;
 }
 
-.openerp .oe_topbar_item.oe_topbar_compose_full_email{
+.openerp .oe_topbar_item.oe_topbar_compose_full_email {
     display: none;
     padding: 0px;
     width: 32px;
@@ -73,4 +73,8 @@
 
 .openerp .inline-item {
     width: auto !important;
+}
+
+.openerp .oe_tips {
+    color: red;
 }
