UPDIS-500 实习生、应聘人员资料录入接口开发 json格式接口不好用，改用xmlrpc

--- a/up_recuitment/views/recuitment_view.xml
+++ b/up_recuitment/views/recuitment_view.xml
@@ -52,8 +52,7 @@
                         </group>
                         <group>
                             <field name="resume"/>
-                            <field name="works" widget="many2many_binary"
-                                   res_model="hr.member" context="{'parent_id':%(dir_up_hr_recuitment)d}"/>
+                            <field name="works"/>
                         </group>
                     </sheet>
                 </form>
