UPDIS-534 开发电子文档上传页面 文件夹层级关系完成

--- a/attachment_upload_dir/static/src/css/directory.css
+++ b/attachment_upload_dir/static/src/css/directory.css
@@ -1,5 +1,6 @@
 .openerp .oe-document-tree {
     font-size: 14px;
+    padding-left: 20px;
 }
 
 .openerp .oe-document-tree .tree-directory-container {
@@ -44,7 +45,8 @@
 
 .openerp .oe-document-tree .tree-directory-container .directory-line .tips {
     color: grey;
-    margin-left: 40px;
+    margin-right: 200px;
+    float:right;
 }
 
 .openerp .oe-document-tree .oe_open > .directory-line {
