UPDIS-500 实习生、应聘人员资料录入接口开发

--- a/up_recuitment/views/recuitment_view.xml
+++ b/up_recuitment/views/recuitment_view.xml
@@ -51,8 +51,10 @@
                             </group>
                         </group>
                         <group>
-                            <field name="resume"/>
-                            <field name="works"/>
+                            <field name="resume" filename="resume_name"/>
+                            <field name="resume_name" invisible="1"/>
+                            <field name="works" filename="works_name"/>
+                            <field name="works_name" invisible="1"/>
                         </group>
                     </sheet>
                 </form>
