UPDIS-534	Critical 开发电子文档上传页面 文件删除按钮完成

--- a/attachment_upload_dir/static/src/css/directory.css
+++ b/attachment_upload_dir/static/src/css/directory.css
@@ -84,7 +84,7 @@
     background-image: url('/web/static/src/img/icons/gtk-refresh.png');
 }
 
-.openerp .oe-document-tree .tree-directory-container .button-holder .button-update {
+.openerp .oe-document-tree .tree-directory-container .button-holder .button-detail {
     background-image: url('/web/static/src/img/icons/gtk-edit.png');
 }
 
