UPDIS-534	Critical 开发电子文档上传页面 添加文档批量上传控件

--- a/attachment_upload_dir/static/src/css/directory.css
+++ b/attachment_upload_dir/static/src/css/directory.css
@@ -46,7 +46,7 @@
 .openerp .oe-document-tree .tree-directory-container .directory-line .tips {
     color: grey;
     margin-right: 200px;
-    float:right;
+    float: right;
 }
 
 .openerp .oe-document-tree .oe_open > .directory-line {
@@ -98,4 +98,8 @@
 
 .openerp .oe-document-tree .tree-directory-container .button-holder .button-rename {
     background-image: url('/web/static/src/img/icons/STOCK_UNDERLINE.png');
+}
+
+.openerp .oe-document-tree .tree-directory-container .button-holder .file-upload {
+    display: none !important;
 }
