UPDIS-534	Critical 开发电子文档上传页面 上传功能完成，上传出错仍需要处理

--- a/attachment_upload_dir/static/src/css/directory.css
+++ b/attachment_upload_dir/static/src/css/directory.css
@@ -58,6 +58,12 @@
     display: block;
 }
 
+.openerp .oe-document-tree .tree-directory-container .oe-upload-holder {
+    /*display: none;*/
+    width: 200px;
+    height: 16px;
+}
+
 .openerp .oe-document-tree .tree-directory-container .directory-line .name {
     background-image: url('/web/static/src/img/icons/terp-folder-yellow.png');
 }
