--- a/up_document/views/attachment_view.xml
+++ b/up_document/views/attachment_view.xml
@@ -7,6 +7,9 @@
             <field name="model">ir.attachment</field>
             <field name="inherit_id" ref="document.view_document_file_form"/>
             <field name="arch" type="xml">
+                <xpath expr="//field[@name='datas']" position="attributes">
+                    <attribute name="widget">binary</attribute>
+                </xpath>
                 <xpath expr="//field[@name='datas_fname']" position="after">
                     <group/>
                     <group col="1">
@@ -64,7 +67,7 @@
             <field name="inherit_id" ref="document.view_document_file_tree"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='name']" position="before">
-                    <field name="datas" filename="name"/>
+                    <field name="datas" filename="name" widget="binary"/>
                 </xpath>
                 <xpath expr="//field[@name='name']" position="attributes">
                     <attribute name="invisible">1</attribute>
