UPDIS-500 实习生、应聘人员资料录入接口开发 添加新的字段

--- a/up_recuitment/views/recuitment_view.xml
+++ b/up_recuitment/views/recuitment_view.xml
@@ -49,6 +49,11 @@
                                 <field name="native_place"/>
                                 <field name="folk"/>
                             </group>
+                            <group>
+                                <field name="emergency_name"/>
+                                <field name="emergency_relation"/>
+                                <field name="emergency_phone"/>
+                            </group>
                         </group>
                         <group colspan="2">
                             <field name="resume" filename="resume_name"/>
