--- a/up_document/views/attachment_view.xml
+++ b/up_document/views/attachment_view.xml
@@ -8,7 +8,7 @@
             <field name="inherit_id" ref="document.view_document_file_form"/>
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='datas']" position="attributes">
-                    <attribute name="widget">binary</attribute>
+                    <attribute name="widget">bigbinary</attribute>
                 </xpath>
                 <xpath expr="//field[@name='datas_fname']" position="after">
                     <group/>
