UPDIS-563 文档管理批量下载 checkbox 功能完成

--- a/up_document/static/src/css/directory.css
+++ b/up_document/static/src/css/directory.css
@@ -78,8 +78,13 @@
 }
 
 .openerp .oe-document-tree .tree-directory-container .document-line .document-select {
-    visibility: collapse;
+    /*visibility: collapse;*/
 }
+
+.openerp .oe-document-tree .tree-directory-container .directory-line .directory-select {
+    /*visibility: collapse;*/
+}
+
 
 .openerp .oe-document-tree .tree-directory-container .button-holder .button-upload {
 
