UPDIS-563 批量下载服务器端改为文件流形式传输

--- a/up_document/views/document_wizard_view.xml
+++ b/up_document/views/document_wizard_view.xml
@@ -49,7 +49,7 @@
                     </group>
                     <div states="get">
                         <h2>Export Complete</h2>
-                        <p>Here is the exported file: <field name="data" readonly="1" filename="name"/></p>
+                        <p>Here is the exported file: <field name="data" readonly="1" widget="tempfile"/></p>
                         <p>This file was generated using the universal <strong>zip</strong> file encoding, please be sure to view and edit
                            using supported software.</p>
                     </div>
