--- a/up_document/views/attachment_view.xml
+++ b/up_document/views/attachment_view.xml
@@ -110,16 +110,24 @@
             <field name="name">ir.attachment.application.tree</field>
             <field name="model">ir.attachment.application</field>
             <field name="arch" type="xml">
-                <tree string="Attachment Download Management" version="7.0"
-                      colors="grey:is_expired==True;red:state == False;blue:state == 'approve';orange:state == 'disapprove'">
-                    <field name="attachment_datas" filename="attachment_name"/>
-                    <field name="attachment_name" invisible="1"/>
-                    <field name="apply_user_id"/>
-                    <field name="apply_date"/>
+                <tree string="Attachment Download Management" version="7.0" edit="false" create="false" delete="false"
+                      colors="green:state == 'approve';grey:state == 'disapprove'">
+                    <field name="apply_user_id" readonly="1"/>
+                    <field name="apply_date" readonly="1"/>
                     <field name="expire_date"/>
-                    <field name="approve_user_id"/>
-                    <field name="approve_date"/>
-                    <field name="is_expired" invisible="1"/>
+                    <field name="state"/>
+                </tree>
+            </field>
+        </record>
+        <record model="ir.ui.view" id="view_attachment_download_tree_manager">
+            <field name="name">ir.attachment.application.tree</field>
+            <field name="model">ir.attachment.application</field>
+            <field name="arch" type="xml">
+                <tree string="Attachment Download Management" version="7.0"
+                      colors="green:state == 'approve';grey:state == 'disapprove'">
+                    <field name="apply_user_id" readonly="1"/>
+                    <field name="apply_date" readonly="1"/>
+                    <field name="expire_date"/>
                     <field name="state"/>
                 </tree>
             </field>
@@ -128,36 +136,46 @@
             <field name="name">ir.attachment.application.form</field>
             <field name="model">ir.attachment.application</field>
             <field name="arch" type="xml">
-
                 <form string="Attachment Download Management" version="7.0">
                     <header>
-                        <button name="approve" type="object"
-                                string="Approve" class="oe_highlight"
+                        <button name="apply" type="object" string="发起申请" class="oe_highlight" states="apply"/>
+
+                        <button name="director_approve" type="object" string="所长审批通过" class="oe_highlight"
+                                groups="up_project.group_up_project_suozhang" states="director_process"/>
+                        <button name="director_disapprove" type="object" string="不通过" class="oe_highlight"
+                                groups="up_project.group_up_project_suozhang" states="director_process"/>
+
+                        <button name="approve" type="object" string="Approve" class="oe_highlight" states="manager_process"
                                 groups="up_document.group_attachment_download_manager"/>
-                        <button name="disapprove" type="object"
-                                string="Disapprove"
+                        <button name="disapprove" type="object" string="Disapprove" states="manager_process"
                                 groups="up_document.group_attachment_download_manager"/>
-                        <field name="state" widget="statusbar" readonly="1"/>
+                        <field name="state" widget="statusbar" readonly="1" statusbar_visible="apply,director_process,manager_process,approve"/>
                     </header>
                     <sheet>
-                        <group>
-                            <field name="attachment_id"/>
+                        <group colspan="2" col="1">
+                            <field name="attachment_ids"/>
                         </group>
-                        <newline/>
-                        <group>
-                            <group>
-                                <field name="apply_user_id"/>
-                                <field name="apply_date"/>
-                            </group>
-                            <group>
-                                <field name="expire_date"/>
-                            </group>
+                        <group colspan="2" col="4">
+                            <field name="expire_date" readonly="1"/>
+                            <field name="is_expired"/>
                         </group>
-                        <group>
+                        <group string="发起人">
+                            <field name="apply_user_id" readonly="1"/>
+                            <field name="apply_date" readonly="1"/>
+                        </group>
+                        <group string="所长">
+                            <field name="director_user_id" readonly="1"/>
+                            <field name="director_approve_date" readonly="1"/>
+                        </group>
+                        <group string="文档管理员">
                             <field name="approve_user_id" readonly="1"/>
                             <field name="approve_date" readonly="1"/>
                         </group>
                     </sheet>
+                    <div class="oe_chatter">
+                        <field name="message_follower_ids" widget="mail_followers"/>
+                        <field name="message_ids" widget="mail_thread"/>
+                    </div>
                 </form>
             </field>
         </record>
