--- a/up_document/views/attachment_view.xml
+++ b/up_document/views/attachment_view.xml
@@ -109,6 +109,7 @@
         <record model="ir.ui.view" id="view_attachment_download_tree">
             <field name="name">ir.attachment.application.tree</field>
             <field name="model">ir.attachment.application</field>
+            <field name="priority" eval="15"/>
             <field name="arch" type="xml">
                 <tree string="Attachment Download Management" version="7.0" edit="false" create="false" delete="false"
                       colors="green:state == 'approve';grey:state == 'disapprove'">
@@ -122,6 +123,8 @@
         <record model="ir.ui.view" id="view_attachment_download_tree_manager">
             <field name="name">ir.attachment.application.tree</field>
             <field name="model">ir.attachment.application</field>
+            <field name="priority" eval="10"/>
+            <field name="groups_id" eval="[(6, 0, [ref('up_project.group_up_project_suozhang'),ref('up_document.group_attachment_download_manager')])]"/>
             <field name="arch" type="xml">
                 <tree string="Attachment Download Management" version="7.0"
                       colors="green:state == 'approve';grey:state == 'disapprove'">
