--- a/up_document/views/attachment_view.xml
+++ b/up_document/views/attachment_view.xml
@@ -153,7 +153,7 @@
                     </header>
                     <sheet>
                         <group colspan="2" col="1">
-                            <field name="attachment_ids"/>
+                            <field name="attachment_ids" readonly="1"/>
                         </group>
                         <group colspan="2" col="4">
                             <field name="expire_date" readonly="1"/>
